// nutri-habits — diagrama de base de datos
// Pegar este archivo completo en dbdiagram.io (New diagram) para visualizarlo.
// Diseñado antes de tocar schema.prisma, según la restricción del brief.
//
// Revisión 2 — cambios respecto al borrador inicial (motivo corto, detalle en cada Note):
//   1. Relación paciente-nutrióloga: se reemplaza User.nutritionist_id (self-FK 1:N) por
//      la tabla PatientNutritionist, para soportar N:N e historial de asignaciones.
//   2. Se agrega MoodEntry como tabla separada (no columna en DailyLog), porque mood se
//      registra como evento cronometrado y puede repetirse varias veces el mismo día.
//   3. RefreshToken: se agregan índices en user_id y token_hash (lookup en cada refresh
//      y revocación masiva por usuario eran table scans sin esto).
//   4. DailyLog y su UNIQUE(patient_id, date) se mantienen sin cambios: ya resuelven la
//      concurrencia de inserts duplicados del mismo día a nivel de esquema.
//   5. Se agrega el trigger trg_check_patient_nutritionist_roles (ver el bloque de SQL al
//      final del archivo) para que Postgres rechace una fila de PatientNutritionist cuyo
//      patient_id no sea un User con role=PATIENT, o cuyo nutritionist_id no sea role=NUTRITIONIST.
//      Una FK simple no alcanza para esto: solo valida que el id exista, no qué role tiene.
//   6. Misma validación extendida a DailyLog.patient_id y MoodEntry.patient_id (triggers
//      trg_check_daily_log_patient_role y trg_check_mood_entry_patient_role), por el mismo
//      motivo: nada impedía antes que esas filas referenciaran un User con role=NUTRITIONIST.
//
// Revisión 3 — surgió durante el diseño de endpoints (docs/SPEC.md), dominio Auth:
//   7. Se agrega el rol ADMIN al enum: solo un admin puede asignar el rol NUTRITIONIST a un
//      usuario, así que admin necesita ser un actor real con su propio login, no un script manual.
//   8. Se agregan birth_date, height, weight a User: opcionales, solo tienen sentido cuando
//      role=PATIENT (mismo patrón que nutritionist_id en el borrador original, antes de
//      moverlo a PatientNutritionist). height/weight van como decimal positivo — unidades
//      confirmadas: height en metros (m), weight en kilogramos (kg). CHECK constraints
//      documentados al final del archivo (DBML no soporta CHECK nativamente, igual que ya
//      pasaba con el índice parcial de PatientNutritionist).
//
// Revisión 4 — dominio Paciente:
//   9. DailyLog.water_ml / exercise_minutes / sleep_hours pasan a NOT NULL: la regla de
//      negocio es que ningún campo puede ir vacío al crear ni al editar un log, así que la
//      BD ahora lo refleja en vez de dejarlo solo como validación de Zod.
//
// Revisión 5 — dominio Admin:
//   10. Se agrega User.is_active (boolean, default true): un admin puede desactivar una
//       cuenta (ej. una nutrióloga), y esa cuenta deja de poder loguearse. Desactivar NO
//       cierra automáticamente sus relaciones en PatientNutritionist — la reasignación de
//       sus pacientes la hace un admin explícitamente, por diseño (para no perder el rastro
//       de qué pacientes quedaron "huérfanos" silenciosamente).
//   11. Solo existe un ADMIN (el seed inicial del proyecto, creado directo en la BD — no hay
//       endpoint para crear otro). Se agrega un índice único parcial que lo garantiza también
//       a nivel de esquema, no solo por convención de la app: ver UNIQUE WHERE role='ADMIN'
//       al final del archivo. Ni "crear usuario" ni "modificar rol" (dominio Admin, SPEC.md)
//       aceptan role=ADMIN como valor de entrada.

Enum user_role {
  PATIENT
  NUTRITIONIST
  ADMIN
}

Table User {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [not null, unique]
  password_hash varchar [not null]
  full_name varchar [not null]
  role user_role [not null]
  birth_date date [note: 'Opcional. Solo se usa cuando role=PATIENT — no forzado por constraint, ver limitación en la Note de la tabla.']
  height decimal(3,2) [note: 'Opcional, en metros (ej. 1.75). Solo se usa cuando role=PATIENT. CHECK(height IS NULL OR height > 0) documentado al final del archivo.']
  weight decimal(5,2) [note: 'Opcional, en kg. Solo se usa cuando role=PATIENT. CHECK(weight IS NULL OR weight > 0) documentado al final del archivo.']
  is_active boolean [not null, default: true, note: 'Una cuenta desactivada no puede loguearse (lo valida /auth/login). Desactivar no reasigna ni cierra relaciones de PatientNutritionist automáticamente.']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Un único modelo para los tres roles: cada fila tiene exactamente un role, nunca dos a la vez. Si una misma persona necesita actuar como paciente y como nutricionista, son dos filas distintas (dos cuentas, dos emails), no una fila con doble rol. La relación paciente-nutrióloga no vive acá (ver PatientNutritionist) — se sacó nutritionist_id de este borrador. La integridad de qué role tiene cada lado de esa relación se valida con un trigger (ver PatientNutritionist), porque una FK simple solo confirma que el id existe, no qué role tiene. Limitación conocida y no resuelta (igual naturaleza que la anterior, pendiente de decisión): nada a nivel de esquema impide que birth_date/height/weight se llenen en una fila con role=NUTRITIONIST o ADMIN; quedan opcionales para los tres roles y la regla "solo aplica a PATIENT" se valida en Zod/app, no en la BD.'
}

Table PatientNutritionist {
  id uuid [pk, default: `gen_random_uuid()`]
  patient_id uuid [not null, ref: > User.id]
  nutritionist_id uuid [not null, ref: > User.id]
  started_at timestamp [not null, default: `now()`]
  ended_at timestamp [note: 'NULL = relación activa. Se cierra (set ended_at) en vez de borrar la fila, para conservar historial.']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (patient_id) [unique, name: 'uniq_active_patient_per_nutritionist', note: 'La regla de negocio actual (un paciente, una nutrióloga activa a la vez) se fuerza con un UNIQUE PARCIAL: UNIQUE(patient_id) WHERE ended_at IS NULL. DBML no tiene sintaxis nativa para índices parciales, así que esto se traduce a una migración SQL manual en Prisma (no a un @@unique simple) — dejarlo anotado para no perder el requisito en la traducción. Si en el futuro un paciente puede tener varias nutriólogas activas a la vez, este es el único punto que hay que tocar.']
    (nutritionist_id) [name: 'idx_active_patients_per_nutritionist', note: 'Pensado como índice parcial WHERE ended_at IS NULL en la migración real, para que "lista de pacientes activos de esta nutrióloga" no escanee relaciones históricas.']
  }

  Note: 'Tabla intermedia para la relación paciente-nutrióloga. Reemplaza el self-FK 1:N del borrador anterior: estructuralmente ya es N:N y conserva historial (started_at/ended_at), aunque hoy la regla de negocio siga siendo 1 nutrióloga activa por paciente (forzada por el unique parcial, no por la forma de la tabla). La integridad de roles (patient_id debe ser role=PATIENT, nutritionist_id debe ser role=NUTRITIONIST) ya no queda solo documentada: se fuerza con el trigger trg_check_patient_nutritionist_roles (SQL al final del archivo), porque una FK no puede expresar esa condición.'
}

Table DailyLog {
  id uuid [pk, default: `gen_random_uuid()`]
  patient_id uuid [not null, ref: > User.id]
  date date [not null]
  water_ml int [not null]
  exercise_minutes int [not null]
  sleep_hours decimal(3,1) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (patient_id, date) [unique, name: 'uniq_patient_date']
  }

  Note: 'Sin cambios respecto al borrador. Una fila por paciente por día, para métricas que son genuinamente "un valor por día" (agua, ejercicio, sueño). UNIQUE(patient_id, date) resuelve la concurrencia: ante dos inserts simultáneos del mismo día, Postgres rechaza el segundo (o se hace upsert vía ON CONFLICT) en vez de crear un duplicado — la app todavía tiene que capturar ese error/usar upsert, pero el esquema ya lo garantiza. El mismo índice cubre la query de historial de 30 días (WHERE patient_id = ? AND date >= ? ORDER BY date) sin necesitar un índice adicional. patient_id ahora también se valida con el trigger trg_check_daily_log_patient_role (SQL al final del archivo): rechaza una fila si el id referenciado no es un User con role=PATIENT.'
}

Table MoodEntry {
  id uuid [pk, default: `gen_random_uuid()`]
  patient_id uuid [not null, ref: > User.id]
  occurred_at timestamp [not null, note: 'Momento exacto del registro, no solo la fecha: a diferencia de agua/ejercicio/sueño, mood puede registrarse varias veces el mismo día.']
  value int [not null]
  note varchar
  created_at timestamp [not null, default: `now()`]

  indexes {
    (patient_id, occurred_at) [name: 'idx_mood_patient_occurred']
  }

  Note: 'Tabla nueva, separada de DailyLog a propósito: mood se describe como un registro cronometrado de hasta una vez por hora, no "un valor por día", así que forzarlo como columna fija en DailyLog rompería el UNIQUE(patient_id, date) o exigiría guardar solo el último valor del día. Se descartó también el modelo genérico HabitEntry(patient_id, date, habit_type, value) para todos los hábitos: hoy water_ml/exercise_minutes/sleep_hours tienen tipos y validaciones distintas por columna, y un value genérico mueve todo ese chequeo a la capa de app sin necesidad real todavía. El rango de value (ej. escala 1-5) queda para validar en Zod/SPEC.md, no en el esquema. patient_id se valida con el trigger trg_check_mood_entry_patient_role (SQL al final del archivo), misma lógica que en DailyLog.'
}

Table RefreshToken {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > User.id]
  token_hash varchar [not null]
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id) [name: 'idx_refresh_token_user', note: 'Necesario para revocar en bloque todos los tokens de un usuario si se compromete la cuenta (UPDATE ... WHERE user_id = ?), y para listar sesiones activas. Sin este índice es un seq scan sobre toda la tabla.']
    (token_hash) [unique, name: 'uniq_refresh_token_hash', note: 'El lookup por token_hash ocurre en cada request de refresh — sin índice es un seq scan en el hot path de auth. unique además detecta a nivel de esquema una colisión de hash, que no debería pasar pero no cuesta nada que la BD lo garantice.']
  }

  Note: 'Se guarda solo el hash del refresh token, nunca en texto plano. revoked_at permite invalidarlo individualmente (logout, rotación, o ante sospecha de compromiso) sin esperar a que expire solo — la fila puntual se marca, no hace falta borrarla. Para revocar "todos los tokens de este usuario" de una sola vez (cuenta comprometida) se actualiza por user_id, por eso el índice ahí es necesario y no opcional.'
}

// ---------------------------------------------------------------------------
// Triggers — DBML no tiene sintaxis nativa para triggers, así que el SQL real
// queda documentado acá para no perderlo al traducir este diagrama a Prisma
// (Prisma tampoco modela triggers; esto se agrega como migración SQL manual,
// ej. con `prisma migrate dev --create-only` + editar el .sql generado).
// ---------------------------------------------------------------------------
//
// CREATE OR REPLACE FUNCTION check_patient_nutritionist_roles()
// RETURNS TRIGGER AS $$
// BEGIN
//   IF NOT EXISTS (
//     SELECT 1 FROM "User" WHERE id = NEW.patient_id AND role = 'PATIENT'
//   ) THEN
//     RAISE EXCEPTION 'patient_id % must reference a User with role PATIENT', NEW.patient_id;
//   END IF;
//
//   IF NOT EXISTS (
//     SELECT 1 FROM "User" WHERE id = NEW.nutritionist_id AND role = 'NUTRITIONIST'
//   ) THEN
//     RAISE EXCEPTION 'nutritionist_id % must reference a User with role NUTRITIONIST', NEW.nutritionist_id;
//   END IF;
//
//   RETURN NEW;
// END;
// $$ LANGUAGE plpgsql;
//
// CREATE TRIGGER trg_check_patient_nutritionist_roles
// BEFORE INSERT OR UPDATE ON "PatientNutritionist"
// FOR EACH ROW EXECUTE FUNCTION check_patient_nutritionist_roles();
//
// -- Misma validación para patient_id en DailyLog y MoodEntry: el id referenciado
// -- tiene que ser un User con role=PATIENT. Es la misma condición las dos veces,
// -- así que se factoriza en una sola función reusada por ambos triggers.
//
// CREATE OR REPLACE FUNCTION check_patient_role()
// RETURNS TRIGGER AS $$
// BEGIN
//   IF NOT EXISTS (
//     SELECT 1 FROM "User" WHERE id = NEW.patient_id AND role = 'PATIENT'
//   ) THEN
//     RAISE EXCEPTION 'patient_id % must reference a User with role PATIENT', NEW.patient_id;
//   END IF;
//
//   RETURN NEW;
// END;
// $$ LANGUAGE plpgsql;
//
// CREATE TRIGGER trg_check_daily_log_patient_role
// BEFORE INSERT OR UPDATE ON "DailyLog"
// FOR EACH ROW EXECUTE FUNCTION check_patient_role();
//
// CREATE TRIGGER trg_check_mood_entry_patient_role
// BEFORE INSERT OR UPDATE ON "MoodEntry"
// FOR EACH ROW EXECUTE FUNCTION check_patient_role();
//
// -- CHECK constraints para User.height / User.weight (positivos, NULL permitido
// -- porque son opcionales). No requieren trigger, son ALTER TABLE simples.
//
// ALTER TABLE "User" ADD CONSTRAINT chk_user_height_positive
//   CHECK (height IS NULL OR height > 0);
//
// ALTER TABLE "User" ADD CONSTRAINT chk_user_weight_positive
//   CHECK (weight IS NULL OR weight > 0);
//
// -- Garantiza que nunca pueda existir más de un User con role=ADMIN, a nivel de BD
// -- y no solo por convención de la app (el admin único se siembra directo en la BD).
//
// CREATE UNIQUE INDEX uniq_single_admin ON "User" (role) WHERE role = 'ADMIN';
